--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha --recursive tests"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
@@ -11,6 +12,7 @@
     "express": "~4.9.0",
     "lodash": "^3.2.0",
     "morgan": "~1.3.0",
-    "slack-client": "^1.3.1"
+    "slack-client": "^1.3.1",
+    "supertest": "^0.15.0"
   }
 }
