--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha --recursive tests"
+    "test": "./node_modules/mocha/bin/mocha --recursive tests"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
     "debug": "~2.0.0",
     "express": "~4.9.0",
     "lodash": "^3.2.0",
+    "mocha": "^2.2.1",
     "morgan": "~1.3.0",
     "slack-client": "^1.3.1",
     "supertest": "^0.15.0"
