--- a/appspec.yml
+++ b/appspec.yml
@@ -34,6 +34,9 @@ files:
   - source: dist/etc/monit/conf.d/harold-bot.conf
     destination: /etc/monit/conf.d
 
+  - source: dist/etc/rsyslog.d/10-haroldbot.conf
+    destination: /etc/rsyslog.d
+
 permissions:
   - object: /etc/init.d/harold-bot
     mode: 755
@@ -42,6 +45,7 @@ hooks:
   ApplicationStop:
     - location: dist/application_stop.sh
       runas: root
+
   AfterInstall:
     - location: dist/after_install.sh
       runas: root
