--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^3.2.0",
     "mocha": "^2.2.1",
     "morgan": "~1.3.0",
+    "request": "^2.67.0",
     "slack-client": "^1.3.1",
     "supertest": "^0.15.0"
   }
